[gd_scene load_steps=21 format=1]

[ext_resource path="res://scripts/garage.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/background.tex" type="Texture" id=2]
[ext_resource path="res://assets/textures/garage_pane.tex" type="Texture" id=3]
[ext_resource path="res://assets/fonts/simpleness_65.fnt" type="BitmapFont" id=4]
[ext_resource path="res://assets/textures/progress.tex" type="Texture" id=5]
[ext_resource path="res://assets/textures/garage_rocket_1.tex" type="Texture" id=6]
[ext_resource path="res://assets/textures/garage_rocket_2.tex" type="Texture" id=7]
[ext_resource path="res://assets/textures/garage_rocket_3.tex" type="Texture" id=8]
[ext_resource path="res://assets/textures/garage_rocket_4.tex" type="Texture" id=9]
[ext_resource path="res://assets/textures/garage_rocket_5.tex" type="Texture" id=10]
[ext_resource path="res://assets/textures/tick.tex" type="Texture" id=11]
[ext_resource path="res://assets/textures/btn_small.tex" type="Texture" id=12]
[ext_resource path="res://assets/textures/btn_small_pressed.tex" type="Texture" id=13]
[ext_resource path="res://assets/textures/btn_right.tex" type="Texture" id=14]
[ext_resource path="res://assets/textures/btn_right_pressed.tex" type="Texture" id=15]
[ext_resource path="res://assets/textures/btn_left.tex" type="Texture" id=16]
[ext_resource path="res://assets/textures/btn_left_pressed.tex" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=1]

animations = [ { "frames":[ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ], "loop":true, "name":"default", "speed":5.0 } ]

[sub_resource type="Animation" id=2]

resource/name = "intro"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("btn_select:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0.2, 0.4 ), "transitions":FloatArray( 0.25, 0.25 ), "update":0, "values":[ Vector2( 962, 1094 ), Vector2( 962, 854 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("btn_back:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0.2, 0.4 ), "transitions":FloatArray( 0.25, 0.25 ), "update":0, "values":[ Vector2( 488, 1094 ), Vector2( 488, 854 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("btn_next:rect/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0.1, 0.3 ), "transitions":FloatArray( 0.25, 0.25 ), "update":0, "values":[ Vector2( 1838, 252 ), Vector2( 1608, 252 ) ] }
tracks/3/type = "value"
tracks/3/path = NodePath("btn_previous:rect/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0.1, 0.3 ), "transitions":FloatArray( 0.25, 0.25 ), "update":0, "values":[ Vector2( -263, 252 ), Vector2( -23, 252 ) ] }
tracks/4/type = "value"
tracks/4/path = NodePath("garage_pane:visibility/opacity")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0, 0.3 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }

[sub_resource type="Animation" id=3]

resource/name = "outro"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("btn_select:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.2 ), "transitions":FloatArray( 0.25, 0.25 ), "update":0, "values":[ Vector2( 962, 854 ), Vector2( 962, 1094 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("btn_back:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.2 ), "transitions":FloatArray( 0.25, 0.25 ), "update":0, "values":[ Vector2( 488, 854 ), Vector2( 488, 1094 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("btn_next:rect/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0.1, 0.3 ), "transitions":FloatArray( 0.25, 0.25 ), "update":0, "values":[ Vector2( 1608, 252 ), Vector2( 1838, 252 ) ] }
tracks/3/type = "value"
tracks/3/path = NodePath("btn_previous:rect/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0.1, 0.3 ), "transitions":FloatArray( 0.25, 0.25 ), "update":0, "values":[ Vector2( -23, 252 ), Vector2( -263, 252 ) ] }
tracks/4/type = "value"
tracks/4/path = NodePath("garage_pane:visibility/opacity")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0, 0.2 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 1.0, 0.0 ] }
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = { "times":FloatArray( 0.5 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"outro_end" } ] }

[node name="garage" type="Node"]

script/script = ExtResource( 1 )

[node name="background" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -2.0
margin/top = 0.0
margin/right = 1918.0
margin/bottom = 1080.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="garage_pane" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 274.0
margin/top = 83.0
margin/right = 1646.0
margin/bottom = 813.0
texture = ExtResource( 3 )
stretch_mode = 0

[node name="lbl_name" type="Label" parent="garage_pane"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 596.0
margin/top = 63.0
margin/right = 1293.0
margin/bottom = 162.0
custom_fonts/font = ExtResource( 4 )
text = "Red Blaster"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="progress_acceleration" type="TextureFrame" parent="garage_pane"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 592.0
margin/top = 338.0
margin/right = 1297.0
margin/bottom = 378.0
texture = ExtResource( 5 )
stretch_mode = 0

[node name="progress_max_speed" type="TextureFrame" parent="garage_pane"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 592.0
margin/top = 479.0
margin/right = 1297.0
margin/bottom = 519.0
texture = ExtResource( 5 )
stretch_mode = 0

[node name="progress_weight" type="TextureFrame" parent="garage_pane"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 592.0
margin/top = 616.0
margin/right = 1297.0
margin/bottom = 656.0
texture = ExtResource( 5 )
stretch_mode = 0

[node name="rocket_preview" type="AnimatedSprite" parent="garage_pane"]

transform/pos = Vector2( 307.224, 337.886 )
transform/rot = -23.5068
frames = SubResource( 1 )
animation = "default"

[node name="tick" type="TextureFrame" parent="garage_pane"]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 511.0
margin/top = 89.0
margin/right = 576.0
margin/bottom = 154.0
texture = ExtResource( 11 )
stretch_mode = 0

[node name="btn_back" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 488.0
margin/top = 854.0
margin/right = 909.0
margin/bottom = 1028.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 12 )
textures/pressed = ExtResource( 13 )
__meta__ = { "_edit_group_":true }

[node name="lbl" type="Label" parent="btn_back"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 419.0
margin/bottom = 160.0
custom_fonts/font = ExtResource( 4 )
text = "Back"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="btn_select" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 962.0
margin/top = 854.0
margin/right = 1383.0
margin/bottom = 1028.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 12 )
textures/pressed = ExtResource( 13 )
__meta__ = { "_edit_group_":true }

[node name="lbl" type="Label" parent="btn_select"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 419.0
margin/bottom = 160.0
custom_fonts/font = ExtResource( 4 )
text = "Select"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="btn_next" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1608.0
margin/top = 252.0
margin/right = 1950.0
margin/bottom = 594.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 14 )
textures/pressed = ExtResource( 15 )

[node name="btn_previous" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -23.0
margin/top = 252.0
margin/right = 319.0
margin/bottom = 594.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 16 )
textures/pressed = ExtResource( 17 )

[node name="anim_player" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/intro = SubResource( 2 )
anims/outro = SubResource( 3 )
next/outro = ""
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "intro"

[connection signal="pressed" from="btn_back" to="." method="_on_btn_back_pressed"]

[connection signal="pressed" from="btn_select" to="." method="_on_btn_select_pressed"]

[connection signal="pressed" from="btn_next" to="." method="_on_btn_next_pressed"]

[connection signal="pressed" from="btn_previous" to="." method="_on_btn_previous_pressed"]


